--- a/cloudy.css
+++ b/cloudy.css
@@ -1,15 +1,18 @@
 body {
-    margin: 3% 15%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(129, 148, 84);
+    margin: 0;
 }
-header,
-footer, 
+
+header, 
 section { 
     align-content: center;
     align-items: center;
     text-align: center;
-    border: solid 1px black;
-    margin: 20px;
+    border-style: none solid;
+    margin: 0px 15%;
+    background-color: whitesmoke;
+    padding: 3% 0%;
 }
 h1 {
     color: forestgreen;
@@ -17,30 +20,133 @@ h1 {
     font-weight: bolder;
     font-size: 40px;
     text-align: center;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    border-style: none none solid none;
+    width: 80%;
+    margin: 0% 10%;
 }  
 
 p {
-    color: blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
+    text-align: left;
+    padding: 1% 10%;
+    font-weight: bold;
 }
 
 /* 
 this is a comment
 font-family doesn't work on txt embeds
 */ 
-embed {
+
+footer {
+    text-align: center;
+    background: rgb(61, 69, 77);
+    padding: 3%;
+}
+
+.buttons img {
+    border: solid 2px whitesmoke;
+    padding: 1%;
+    /* background: forestgreen;
+    color: black; */
+    margin: 10px;
+    align-items: center;
+    border-radius: 50%;
+}
+/*
+.external a {
+    height: 2%;
+    width: 2%;
+}
+*/
+.buttons img:hover {
+    background: slategray;
+}
+
+.banner {
+    margin: 0px;
+    padding-top: 3%;
+    padding-right: 3%;
+    padding-left: 3%;
+    border-style: solid;
+}
+
+.banner h1 {
+    background: whitesmoke;
+    opacity: 75%;
+    border-style: none;
     width: 100%;
+    margin: 0%;
+}
+
+.banner h2, 
+.banner h3 {
+    text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
+}
+
+.banner ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.banner li {
+    display: inline;
+    background: whitesmoke;
+    opacity: 75%;
+    padding: 1%;
+}
+
+.banner a {
+    text-decoration: none;
     font-family: cursive;
 }
 
-.buttons a {
-    border: solid 2px olive;
-    padding: 10px;
-    background: forestgreen;
-    color: black;
-    margin: 10px;
-    align-items: center;
+.home {
+    background: url(Photos/banner.jpg);
+    background-position: left;
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
 }
 
-.buttons a:hover {
-    background: slategray;
+.flexbox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: lightgrey;
+}
+
+.flexbox p {
+    display: block;
+    width: 12%;
+    padding: 1%;
+    margin: 1.5%;
+    background: forestgreen;
+}
+
+.twitter img{
+    color: white;
+    background: #33CCFF;
+}
+
+.linkedin img {
+    color: white;
+    background: #4875B4;
+}
+
+.github img{
+    color: white;
+    background: #333;
+}
+
+.giphy img {
+    color:white;
+    background: linear-gradient(90deg, green, yellow, coral, rebeccapurple, lightblue);
+}
+
+.steam img {
+    color: white;
+    background: linear-gradient(135deg, #66C0F4, #2A475e, #1B2838, #171A21);
 }
