--- a/cloudy.css
+++ b/cloudy.css
@@ -16,7 +16,7 @@ section {
 }
 h1 {
     color: forestgreen;
-    font-family: cursive;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bolder;
     font-size: 40px;
     text-align: center;
@@ -31,6 +31,16 @@ p {
     font-size: larger;
     text-align: left;
     padding: 1% 10%;
+    font-weight: bold;
+}
+
+ul {
+    list-style-type: square;
+    margin-left: 25%;
+    margin-right: 25%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
+    text-align: left;
     font-weight: bold;
 }
 
@@ -186,6 +196,12 @@ footer {
     border-radius: 50%;
     width: 20%;
     height: 20%;
+}
+
+.profile-pic-wide img {
+    border-radius: 40%;
+    width: 30%;
+    height: 25%;
 }
 
 .timeline {
