--- a/cloudy.css
+++ b/cloudy.css
@@ -27,7 +27,6 @@ h1 {
 }  
 
 p {
-    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     font-family: 'memoriesregular';
     font-size: larger;
     text-align: justify;
@@ -38,10 +37,9 @@ ul {
     list-style-type: square;
     margin-left: 25%;
     margin-right: 25%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'memoriesregular';
     font-size: larger;
     text-align: left;
-    font-weight: bold;
 }
 
 /* 
@@ -217,12 +215,17 @@ footer {
     border: solid 2px whitesmoke;
     padding: 1%;
     margin: 10px;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 40%;
+    margin-right: 40%;
     align-items: center;
-    border-radius: 50%;
+    border-radius: 20%/50%;
 }
-.repo-link img, .repo-link p{
+.repo-link img, .repo-link span{
     display: inline;
-    
+    text-decoration: none;
+    color: whitesmoke;
+    vertical-align: middle;
+    font-family: 'memoriesregular';
+    font-size: large;
 }
+
