--- a/style/containers.css
+++ b/style/containers.css
@@ -52,6 +52,27 @@ img {
     object-fit: cover;
 }
 
+table {
+    align-content: center;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    border-collapse: collapse;
+}
+
+tr {
+    border-bottom: 2pt solid forestgreen;
+    
+}
+
+td {
+    width:225px;
+    word-wrap: normal;
+    margin-left: 1%;
+    margin-right: 1%;
+    
+}
+
 footer {
     width: 75%;
     margin: 0% 12.5%;
