bio and font update

--- a/style/text.css
+++ b/style/text.css
@@ -2,11 +2,13 @@
 Style for text-containing elements
 */
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    --NormalFont: Arial, Helvetica, sans-serif;
+    --HeaderFont: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--NormalFont);
 }
 
 h1, h2, h3, h4, header li, header ol, header ul, header div, button {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--HeaderFont);
     text-align: center;
     align-content: center;
 }
