bring back font changing

--- a/public/global.css
+++ b/public/global.css
@@ -1,9 +1,8 @@
 html {
     --NormalFont: Arial, Helvetica, sans-serif;
-    --HeaderFont: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    --NormalHeaderFont: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	--FunFont: 'memoriesregular';
 	--UnFunFont: 'hellveticaregular';
-    font-family: var(--NormalFont);
 }
 
 html, body {
